--- a/Develop/index.html
+++ b/Develop/index.html
@@ -8,75 +8,79 @@
 </head>
 
 <body>
+
+<!-- header -->
     <header class="header">
-        <h1>Hori<span class="seo">seo</span>n</h1>
-        <nav>
-            <ul>
-                <li>
-                    <a href="#search-engine-optimization">Search Engine Optimization</a>
-                </li>
-                <li>
-                    <a href="#online-reputation-management">Online Reputation Management</a>
-                </li>
-                <li>
-                    <a href="#social-media-marketing">Social Media Marketing</a>
-                </li>
-            </ul>
+            <h1 class="header__logo">Hori<span>seo</span>n</h1>
+        <nav class="header__nav">
+            <a href="#search-engine-optimization">Search Engine Optimization</a>   
+            <a href="#online-reputation-management">Online Reputation Management</a>
+            <a href="#social-media-marketing">Social Media Marketing</a>   
         </nav>
     </header>
-    <img src="./assets/images/digital-marketing-meeting.jpg" class="hero"/>
+
+<!-- hero image -->
+    <div>
+        <img alt="SEO specialists collaborating on a client project." src="./assets/images/digital-marketing-meeting.jpg" id="hero-image"/>
+    </div>
+
+<!-- main content -->
     <main class="content">
-        <div class="search-engine-optimization">
-            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
-            <h2>Search Engine Optimization</h2>
+        <section class="content__container" id="search-engine-optimization">
+            <img class="content__image float-left" src="./assets/images/search-engine-optimization.jpg" />
+            <h2 class="content__title">Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
-        </div>
-        <div id="online-reputation-management" class="online-reputation-management">
-            <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
-            <h2>Online Reputation Management</h2>
+        </section>
+
+        <section class="content__container" id="online-reputation-management">
+            <img class="content__image float-right" src="./assets/images/online-reputation-management.jpg"/>
+            <h2 class="content__title">Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
-        </div>
-        <div id="social-media-marketing" class="social-media-marketing">
-            <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
-            <h2>Social Media Marketing</h2>
+        </section>
+
+        <section class="content__container" id="social-media-marketing" >
+            <img class="content__image float-left" src="./assets/images/social-media-marketing.jpg"/>
+            <h2 class="content__title">Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
-        </div>
+        </section>
     </main>
+
+<!-- aside content -->
     <aside class="benefits">
-        <div class="benefit-lead">
-            <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" />
+        <div class="benefit__content">
+            <h3 class="benefit__title">Lead Generation</h3>
+            <img class="benefit__image" src="./assets/images/lead-generation.png"/>
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </div>
-        <div class="benefit-brand">
-            <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" />
+        <div class="benefit__content">
+            <h3 class="benefit__title">Brand Awareness</h3>
+            <img class="benefit__image" src="./assets/images/brand-awareness.png" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </div>
-        <div class="benefit-cost">
-            <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png"></img>
-            <p>
-                As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
+        <div class="benefit__content">
+            <h3 class="benefit__title">Cost Management</h3>
+            <img class="benefit__image" src="./assets/images/cost-management.png"></img>
+            <p>As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
         </div>
     </aside>
-    <footer class="footer">
-        <h2>Made with ❤️️ by Horiseon</h2>
-        <p>
+
+    <!-- footer -->
+    <footer class="footer company-font">
+        <h2 id="footer__page-author">Made with ❤️️ by Horiseon</h2>
+        <p class="footer__copyright">
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
     </footer>
 </body>
-
 </html>
