Add alt text to images

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -27,7 +27,7 @@
 <!-- main content -->
     <main class="content">
         <section class="content__container" id="search-engine-optimization">
-            <img class="content__image float-left" src="./assets/images/search-engine-optimization.jpg" />
+            <img class="content__image float-left" alt="A note pad with SEO ideas." src="./assets/images/search-engine-optimization.jpg" />
             <h2 class="content__title">Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
@@ -35,7 +35,7 @@
         </section>
 
         <section class="content__container" id="online-reputation-management">
-            <img class="content__image float-right" src="./assets/images/online-reputation-management.jpg"/>
+            <img class="content__image float-right" alt="A laptop displaying a climbing bar chart with the title - reputation." src="./assets/images/online-reputation-management.jpg"/>
             <h2 class="content__title">Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
@@ -43,7 +43,7 @@
         </section>
 
         <section class="content__container" id="social-media-marketing" >
-            <img class="content__image float-left" src="./assets/images/social-media-marketing.jpg"/>
+            <img class="content__image float-left" alt="Social media marketing specialists discussing strategies around the table." src="./assets/images/social-media-marketing.jpg"/>
             <h2 class="content__title">Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
