--- a/Develop/index.html
+++ b/Develop/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Horiseon</title>
+    <title>Horiseon | The SEO Specialists</title>
 </head>
 
 <body>
@@ -77,7 +77,7 @@
 
     <!-- footer -->
     <footer class="footer company-font">
-        <h2 id="footer__page-author">Made with ❤️️ by Horiseon</h2>
+        <p id="footer__page-author">Made with ❤️️ by Horiseon</p>
         <p class="footer__copyright">
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
