--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./Develop/assets/css/style.css">
-    <title>Horiseon | The SEO Specialists</title>
+    <title>Horiseon | The SEO Experts</title>
 </head>
 
 <body>
@@ -20,14 +20,12 @@
     </header>
 
 <!-- hero image -->
-    <div>
-        <img alt="SEO specialists collaborating on a client project." src="./Develop/assets/images/digital-marketing-meeting.jpg" id="hero-image"/>
-    </div>
-
+    <img alt="SEO specialists collaborating on a client project." src="./Develop/assets/images/digital-marketing-meeting.jpg" id="hero-image"/>
+    
 <!-- main content -->
     <main class="content">
         <section class="content__container" id="search-engine-optimization">
-            <img class="content__image float-left" alt="A note pad with SEO ideas." src="./Develop/assets/images/search-engine-optimization.jpg" />
+            <img class="content__image float-left" alt="A note pad containing information on SEO strategies." src="./Develop/assets/images/search-engine-optimization.jpg" />
             <h2 class="content__title">Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
@@ -43,7 +41,7 @@
         </section>
 
         <section class="content__container" id="social-media-marketing" >
-            <img class="content__image float-left" alt="Social media marketing specialists discussing strategies around the table." src="./Develop/assets/images/social-media-marketing.jpg"/>
+            <img class="content__image float-left" alt="Social media marketing experts collaborating around the table." src="./Develop/assets/images/social-media-marketing.jpg"/>
             <h2 class="content__title">Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
@@ -77,7 +75,7 @@
 
     <!-- footer -->
     <footer class="footer company-font">
-        <p id="footer__page-author">Made with ❤️️ by Horiseon</p>
+        <p id="footer__author">Made with ❤️️ by Horiseon</p>
         <p class="footer__copyright">
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
