Create custom CSS properties

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     </aside>
 
     <!-- footer -->
-    <footer class="footer company-font">
+    <footer class="footer">
         <p id="footer__author">Made with ❤️️ by Horiseon</p>
         <p class="footer__copyright">
             &copy; 2019 Horiseon Social Solution Services, Inc.
@@ -82,3 +82,4 @@
     </footer>
 </body>
 </html>
+        
